<resources>
    <!-- App -->
    <string name="app_name">AndroidJetpack</string>

    <!-- Title -->
    <string name="title_search_movie_fragment">Search Movie</string>
    <string name="title_detail_movie_fragment">Detail Movie</string>
    <string name="title_about_fragment">About</string>
    <string name="title_example_fragment">Example Fragment</string>
    <string name="title_components">Components</string>
    <string name="title_Thanks">Thanks</string>
    <string name="title_application">Application</string>
    <string name="title_application_year">Year</string>
    <string name="title_version">Version</string>
    <string name="title_author">Author</string>
    <string name="title_author_name">Name</string>
    <string name="title_author_nickname_github">Github nickname</string>

    <!-- Text -->
    <string name="text_results">Results</string>
    <string name="text_search_movie">Search movie</string>
    <string name="text_image_description">Image description</string>
    <string name="text_loading">Loading&#8230;</string>
    <string name="text_title">Title</string>
    <string name="text_overview">Overview</string>
    <string name="text_list_components">
        <li>Navigation</li>\n
        <li>Databinding</li>\n
        <li>Lifecycle</li>\n
        <li>ViewModel</li>\n
        <li>RxJava</li>\n
        <li>Retrofit</li>\n
        <li>Glide</li>
    </string>
    <string name="text_version">Version</string>
    <string name="text_results_searched">%1$d results found</string>
    <string name="text_developed_by">Developed by</string>
    <string name="author">\@Athorfeo</string>

    <!-- Menu -->
    <string name="menu_search">Search</string>
    <string name="menu_daily">Daily - Room</string>
    <string name="menu_example">Example Fragment</string>
    <string name="menu_activity">Example Activity</string>
    <string name="menu_location">Location</string>
    <string name="menu_fingerprint">Fingerprint</string>
    <string name="menu_about">About</string>

    <!-- Content -->
    <string name="image_description">Content Description</string>

    <!-- Button -->
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>

</resources>
