<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="@drawable/bg_item_list">
    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>
    <TextView
            android:text="@string/text_developed_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
    />
    <TextView
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView16"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPrimary"
            android:layout_marginStart="4dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/text_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView17" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView17" android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0" android:text="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>