<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/search_movie_fragment">

    <fragment
            android:id="@+id/search_movie_fragment"
            android:name="com.obcompany.androidjetpack.app.ui.movie.SearchMovieFragment"
            android:label="@string/title_search_movie_fragment"
            tools:layout="@layout/fragment_search_movie">
        <action
                android:id="@+id/to_detail_movie_fragment"
                app:destination="@+id/detail_movie_fragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right" />

        <action
                android:id="@+id/to_about_fragment"
                app:destination="@+id/about_fragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
            android:id="@+id/detail_movie_fragment"
            android:name="com.obcompany.androidjetpack.app.ui.movie.detail.DetailMovieFragment"
            android:label="@string/title_detail_movie_fragment"
            tools:layout="@layout/fragment_detail_movie">
        <argument
                android:name="movieId"
                app:argType="integer" />
    </fragment>

    <fragment
            android:id="@+id/about_fragment"
            android:name="com.obcompany.androidjetpack.app.ui.about.AboutFragment"
            android:label="@string/title_about_fragment"
            tools:layout="@layout/fragment_detail_movie">
    </fragment>

</navigation>