<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>
    <ScrollView
            tools:context="com.obcompany.androidjetpack.app.viewmodel.MainActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">
            <TextView
                    android:text="@string/title_application"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView5"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"/>
            <TextView
                    android:text="@string/title_Thanks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView18"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textThanks"
                    app:layout_constraintTop_toBottomOf="@+id/textView18"
                    android:textSize="12sp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="@string/text_version"
                    android:layout_width="0dp"
                    android:layout_height="17dp" android:id="@+id/textView6"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textThanks" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textVersion"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:textSize="12sp"/>
            <TextView
                    android:text="@string/title_components"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textVersion" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/text_list_components"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textSize="12sp"/>
            <TextView
                    android:text="@string/title_application_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView11"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textAppYear"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" android:textSize="12sp"/>
            <TextView
                    android:text="@string/title_author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView13"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textAppYear" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" style="@style/TextAppearance.MaterialComponents.Subtitle1"/>
            <TextView
                    android:text="@string/title_author_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView14"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textAuthorName"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/textView14"
                    android:textSize="12sp"/>
            <TextView
                    android:text="@string/title_author_nickname_github"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView15"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textAuthorName" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textAuthorGithubNickname"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textSize="12sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
