<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable name="urlMovieImage" type="String"/>
        <variable name="movie" type="com.obcompany.androidjetpack.app.model.Movie"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:windowSoftInputMode="adjustResize"
            tools:context="com.obcompany.androidjetpack.app.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
        >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="exitUntilCollapsed|scroll">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imageMovie"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop" android:contentDescription="@string/text_image_description"/>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical" android:padding="16dp">
                <TextView
                        android:text="@string/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView3"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvTitle"
                        android:text="@{movie.originalTitle}"
                />
                <TextView
                        android:text="@string/text_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView4"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1" android:layout_marginTop="16dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvOverview"
                        android:text="@{movie.overview}"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
